Help-button done

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,6 +8,13 @@
   margin-top: 35px;
   position: relative;
 }
+#markdown-help {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 522px;
+  background-color: #555;
+}
 .col1 {
   position: absolute;
   left: 0px;
@@ -29,7 +36,7 @@
 }
 .col2 {
   position: absolute;
-  left: 560px;
+  left: 532px;
   top: 0px;
 }
 .radio {
@@ -65,8 +72,15 @@
 .txt {
   max-width: 35em;
 }
+.md {
+  padding: 10px 30px;
+}
+.caption {
+  margin-top: -15px;
+}
 textarea {
-  line-height: 1;
+  width: 100%;
+  line-height: 1.2;
   font-family: monospace;
   font-size: 100%;
 }
