--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -6,6 +6,12 @@
 #taco
     margin-top 35px
     position relative
+#markdown-help
+    position absolute
+    left 0px
+    top 0px
+    width 522px
+    background-color #555
 .col1
     position absolute
     left 0px
@@ -24,7 +30,7 @@
     background-color #222
 .col2
     position absolute
-    left 560px
+    left 532px
     top 0px
 .radio
     margin-right 10px
@@ -52,9 +58,13 @@
     display none
 .txt
     max-width 35em
+.md
+    padding 10px 30px
+.caption
+    margin-top -15px
 textarea
-    width = 100%
-    line-height 1
+    width 100%
+    line-height 1.2
     font-family monospace
     font-size 100%
 html
