--- a/views/case.jade
+++ b/views/case.jade
@@ -5,7 +5,7 @@
     #column_1.col1
       -each radio in radios
         .radio
-          .stack(url='#{radio.img}', class='img512', style='background-image: url("/images/#{radio.img}.jpg")')
+          .stack(url='#{radio.img}', class='img512', style='background-image: url("/image/#{radio.img}")')
           .caption
             textarea.mdtxt(style='display:none')
               #{radio.caption}
