starting rewrite in coffeescript

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -11,7 +11,7 @@
     left 0px
     top 0px
     width 522px
-    background-color #555
+    background-image url("/images/dgrey034.jpg")
 .col1
     position absolute
     left 0px
@@ -73,6 +73,7 @@ body
     font-family Georgia, Palatino, serif
     color #ccc
     background-color #333
+    background-image url("/images/dgrey037.jpg")
     line-height 1
     height 100%
 h1, h2, h3, h4 
