--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,7 +13,7 @@
   left: 0px;
   top: 0px;
   width: 522px;
-  background-color: #555;
+  background-image: url("/images/dgrey034.jpg");
 }
 .col1 {
   position: absolute;
@@ -91,6 +91,7 @@ body {
   font-family: Georgia, Palatino, serif;
   color: #ccc;
   background-color: #333;
+  background-image: url("/images/dgrey037.jpg");
   line-height: 1;
   height: 100%;
 }
