working with easy-oauth

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -8,10 +8,10 @@
     position relative
 #markdown-help
     position absolute
-    left 0px
+    left 10px
     top 0px
-    width 522px
-    background-image url("/images/dgrey034.jpg")
+    width 512px
+    background-image url("/images/paper/Texture0214.jpg")
 .col1
     position absolute
     left 0px
@@ -20,6 +20,14 @@
     position fixed 
     top 5px
     right 5px
+.details
+    position fixed
+    top 5px
+    right 200px
+#logininfo
+    position fixed
+    top 50%
+    right 50%
 #editbar
     position fixed
     top 0px
@@ -57,11 +65,14 @@
     height 0px
     display none
 .txt
+    background-image url("/images/paper/Texture0213.jpg")
     max-width 35em
+    min-width 20em
 .md
     padding 10px 30px
 .caption>.md
     margin-top -15px
+    color #888
 textarea
     width 100%
     line-height 1.2
@@ -71,13 +82,14 @@ html
     height 100%
 body
     font-family Georgia, Palatino, serif
-    color #ccc
-    background-color #333
-    background-image url("/images/dgrey037.jpg")
+    color #444
+    background-color #bbb
+    background-image url("/images/Dark-Metal-Grid-Patterns_04.jpg")
+    background-size 200px
     line-height 1
     height 100%
 h1, h2, h3, h4 
-    color #eee
+    color #222
     font-weight 400
 h1, h2, h3, h4, h5, p 
     margin-bottom 24px
@@ -126,7 +138,7 @@ blockquote p
     color #aaa
     max-width 460px
 hr 
-    width 540px
+    width 100%
     text-align left
     margin 0 auto 0 0
     color #aaa
