--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,10 +10,10 @@
 }
 #markdown-help {
   position: absolute;
-  left: 0px;
+  left: 10px;
   top: 0px;
-  width: 522px;
-  background-image: url("/images/dgrey034.jpg");
+  width: 512px;
+  background-image: url("/images/paper/Texture0214.jpg");
 }
 .col1 {
   position: absolute;
@@ -24,6 +24,16 @@
   position: fixed;
   top: 5px;
   right: 5px;
+}
+.details {
+  position: fixed;
+  top: 5px;
+  right: 200px;
+}
+#logininfo {
+  position: fixed;
+  top: 50%;
+  right: 50%;
 }
 #editbar {
   position: fixed;
@@ -70,13 +80,16 @@
   display: none;
 }
 .txt {
+  background-image: url("/images/paper/Texture0213.jpg");
   max-width: 35em;
+  min-width: 20em;
 }
 .md {
   padding: 10px 30px;
 }
 .caption>.md {
   margin-top: -15px;
+  color: #888;
 }
 textarea {
   width: 100%;
@@ -89,9 +102,10 @@ html {
 }
 body {
   font-family: Georgia, Palatino, serif;
-  color: #ccc;
-  background-color: #333;
-  background-image: url("/images/dgrey037.jpg");
+  color: #444;
+  background-color: #bbb;
+  background-image: url("/images/Dark-Metal-Grid-Patterns_04.jpg");
+  background-size: 200px;
   line-height: 1;
   height: 100%;
 }
@@ -99,7 +113,7 @@ h1,
 h2,
 h3,
 h4 {
-  color: #eee;
+  color: #222;
   font-weight: 400;
 }
 h1,
@@ -172,7 +186,7 @@ blockquote p {
   max-width: 460px;
 }
 hr {
-  width: 540px;
+  width: 100%;
   text-align: left;
   margin: 0 auto 0 0;
   color: #aaa;
