--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,6 +5,9 @@ html
     -each style in styles
       link(rel='stylesheet', href='/stylesheets/#{style}')
     script(src = 'http://code.jquery.com/jquery-latest.js')
+    script
+      !window.jQuery && document.write('<script src="javascripts/jquery-latest.js"><\/script>')
+    script(src="/auth/client")
     -each script in scripts
       script(type='text/javascript', src='/javascripts/#{script}')
   body
