--- a/views/case.jade
+++ b/views/case.jade
@@ -17,7 +17,7 @@
           .md
     #markdown-help
       textarea.mdtxt(style='display:none')
-        // #{mdhelp}
+        #{mdhelp}
       .md
     #loginfo
     iframe(id='editbar', src='about:none')
