--- a/views/case.jade
+++ b/views/case.jade
@@ -49,7 +49,8 @@ script(type='text/javascript')
 
     $('#editbutton').live({
       click: function(){
-      $('#editbar').show().attr('src', window.location.pathname + "edit");
+      path=location.pathname.split("/");
+      $('#editbar').show().attr('src', path[0] + "/" + path[1] + "/" + path[2] + "/" + path[3] + "/edit");
       $(this).hide();
       }
     });
