working on oauth

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -73,6 +73,8 @@
   border: 0;
   background-size: auto 100%;
   overflow: hidden;
+  color: #fff;
+  background-color: #222;
 }
 .hidden {
   width: 0px;
