--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -60,6 +60,8 @@
     border 0
     background-size auto 100%
     overflow hidden
+    color #fff
+    background-color #222
 .hidden
     width 0px
     height 0px
