--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,7 +5,7 @@ html
     -each style in styles
       link(rel='stylesheet', href='/stylesheets/#{style}')
     script(src = 'http://code.jquery.com/jquery-latest.js')
-    script(src="/auth/client")
+    script(src = '/auth/client')
     -each script in scripts
       script(type='text/javascript', src='/javascripts/#{script}')
   body
