--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -16,26 +16,22 @@
     position absolute
     left 0px
     top 0px
-#editbutton
-    position fixed 
+#session
+    position fixed
     top 5px
     right 5px
-.details
-    position fixed
-    top 35px
-    right 200px
-#logininfo
-    position fixed
-    top 50%
-    right 50%
 #editbar
     position fixed
-    top 0px
+    bottom 0px
     left 0px
     margin-top 0px
     height 30px
     width 100%
     background-color #222
+#editbutton
+    position fixed
+    bottom 5px
+    left 5px
 .col2
     position absolute
     left 532px
@@ -84,7 +80,7 @@ html
     height 100%
 body
     font-family Georgia, Palatino, serif
-    color #444
+    color #888
     background-color #bbb
     background-image url("/images/Dark-Metal-Grid-Patterns_04.jpg")
     background-size 200px
