--- a/views/edit.jade
+++ b/views/edit.jade
@@ -1,16 +1,17 @@
 #controls
-  form(id ='savepage', style='position:fixed; top: 5px; right: 5px', action='/case/#{caseid}/#{page}')
+  form(id ='savepage', style='position:fixed; bottom: 5px; left: 5px', action='/case/#{caseid}/#{page}')
     input(type='hidden', name='_method', value='put')
+    button(id='done', type='button')
+      | Done
     button(id='help', type='button')
       | Show/hide help
     input(id='save', type='submit', value='Save page')
-    button(id='done', type='button')
-      | Done
   form(id ='uploadform', style='position: fixed; top: 5px; left: 5px')
     input(type='file', name='userfile', id='userfile', multiple='multiple')
     input(id='upload', type='submit', value='Upload file')
 #iframe(style='width: 0px; height: 0px; display:none')
+
 script(type='text/javascript')
   $(function(){
     editfunctions(); //activates edit functionality when page is loaded
-  })
+  });
