--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -25,9 +25,9 @@
   top: 5px;
   right: 5px;
 }
-#loginbar {
+#editbar {
   position: fixed;
-  top: 0px;
+  bottom: 0px;
   left: 0px;
   margin-top: 0px;
   height: 30px;
@@ -36,8 +36,33 @@
 }
 #editbutton {
   position: fixed;
+  bottom: 5px;
+  left: 5px;
+}
+#pageinfo1 {
+  position: fixed;
+  bottom: 5px;
+  left: 5px;
+  writing-mode: bt-lr;
+}
+#controls {
+  position: relative;
+}
+#savepage {
+  position: fixed;
+  left: 5px;
   top: 5px;
+}
+#uploadform {
+  position: fixed;
   right: 5px;
+  top: 5px;
+}
+#info {
+  color: bbb;
+  position: fixed;
+  left: 5px;
+  top: 5px;
 }
 .col2 {
   position: absolute;
@@ -56,6 +81,21 @@
   background-image: url("/images/loading_gif.gif");
   background-position: 50% 50%;
   background-repeat: no-repeat;
+}
+button {
+  background-color: #222;
+  color: #888;
+  -moz-border-radius: 12px;
+  -webkit-border-radius: 12px;
+}
+input {
+  background-color: #222;
+  color: #888;
+  -moz-border-radius: 12px;
+  -webkit-border-radius: 12px;
+}
+.input1 {
+  background-color: #222;
 }
 .deletebutton {
   position: absolute;
