--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -32,6 +32,26 @@
     position fixed
     bottom 5px
     left 5px
+#pageinfo1
+    position fixed
+    bottom 5px
+    left 5px
+    writing-mode bt-lr
+#controls
+    position relative
+#savepage
+    position fixed
+    left 5px
+    top 5px
+#uploadform
+    position fixed
+    right 5px
+    top 5px
+#info
+    color bbb
+    position fixed
+    left 5px
+    top 5px
 .col2
     position absolute
     left 532px
@@ -46,6 +66,18 @@
     background-image url("/images/loading_gif.gif")
     background-position 50% 50%
     background-repeat no-repeat
+button
+    background-color #222
+    color #888
+    -moz-border-radius 12px
+    -webkit-border-radius 12px
+input
+    background-color #222
+    color #888
+    -moz-border-radius 12px
+    -webkit-border-radius 12px
+.input1
+    background-color #222
 .deletebutton
     position absolute
     top 5px
