--- a/views/edit.jade
+++ b/views/edit.jade
@@ -1,14 +1,14 @@
 #controls
-  form(id ='savepage', style='position:fixed; bottom: 5px; left: 5px', action='/case/#{caseid}/#{page}')
-    input(type='hidden', name='_method', value='put')
-    button(id='done', type='button')
+  form(id='savepage', action='/case/#{caseid}/#{page}')
+    input.input1(type='hidden', name='_method', value='put')
+    button.but1(id='done', type='button')
       | Done
-    button(id='help', type='button')
+    button.but1(id='help', type='button')
       | Show/hide help
-    input(id='save', type='submit', value='Save page')
-  form(id ='uploadform', style='position: fixed; top: 5px; left: 5px')
-    input(type='file', name='userfile', id='userfile', multiple='multiple')
-    input(id='upload', type='submit', value='Upload file')
+    input.input1(id='save', type='submit', value='Save page')
+  form(id ='uploadform')
+    input.input1(type='file', name='userfile', id='userfile', multiple='multiple')
+    input.input1(id='upload', type='submit', value='Upload file(s)')
 #iframe(style='width: 0px; height: 0px; display:none')
 
 script(type='text/javascript')
