--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,6 +6,7 @@ html
       link(rel='stylesheet', href='/stylesheets/#{style}')
     script(src = 'http://code.jquery.com/jquery-latest.js')
     script(src = '/auth/client')
+    script(src = 'http://platform.twitter.com/widgets.js')
     -each script in scripts
       script(type='text/javascript', src='/javascripts/#{script}')
   body
