--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,6 +1,7 @@
 !!!5
 html
   head
+    meta(name='viewport', content='initial-scale=1.0, width=device-width')
     title #{title} 
     -each style in styles
       link(rel='stylesheet', href='/stylesheets/#{style}')
