--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -4,11 +4,16 @@
     padding-top 30px
 #radios
     float left
-    margin 0 auto
+    width 50%
 .stack
     position relative
     overflow hidden
-    width 512px
+.stack_window
+    position absolute
+    overflow hidden
+.stack_image
+    display none
+    width 100%
 .imgload
     visibility hidden
 .deletebutton
@@ -19,9 +24,20 @@
     margin-top -15px
     color #888
 #texts
-    margin-left 512px
+    width 50%
+    float right
 .txt
     background-image url("/images/paper/Texture0213.jpg")
+@media screen and (max-width: 320px)
+    #radios
+        width 100%
+    #texts
+        width 100%
+@media screen and (min-width: 1024px)
+    #radios
+        width 65%
+    #texts
+        width 35%
 textarea
     width 100%
     line-height 1.2
