working on post-update

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -7,6 +7,10 @@
     font-family "bank gothic"
     font-weight bold
     font-size 50pt
+    margin 30px
+.welcome
+    font-family "Brush Script MT"
+    font-size 40pt
 .small_logo
     font-family calibri
     font-weight bold
