--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,6 +8,11 @@
   font-family: "bank gothic";
   font-weight: bold;
   font-size: 50pt;
+  margin: 30px;
+}
+.welcome {
+  font-family: "Brush Script MT";
+  font-size: 40pt;
 }
 .small_logo {
   font-family: calibri;
