--- a/views/readme.jade
+++ b/views/readme.jade
@@ -15,6 +15,4 @@
 
   Finally, this is a hobby of mine, I built the site because it's something I hope can be useful during my radiology residency. I plan on charging a nominal one-time fee of $10 to offset server costs in the future but I won't after-charge anyone (if you sign up now it will continue to be free for you). I don’t claim any rights to information you add to the database. Please see [about](./about) for further information on the software of this site. If you want to get in touch with me you can drop me a line at <johannes.finnsson@gmail.com> or tweet me (lijf).
 
-
-    <sub><sup>1</sup>
-    If you like collecting articles but haven't tried Mendeley I suggest you check it out <http://www.mendeley.com>, they have a great program for storing your pdf:s, good integration to word and bibtex and an interesting social network thing where you can connect with people reading what you read and share articles</sub>
+<sub><sup>1</sup>If you like collecting articles but haven't tried Mendeley I suggest you check it out <http://www.mendeley.com>, they have a great program for storing your pdf:s, good integration to word and bibtex and an interesting social network thing where you can connect with people reading what you read and share articles</sub>
