working on indexpage

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -2,25 +2,26 @@
     margin 0 auto
     width 90%
     padding-top 5px
+#indexpage
+    text-align center
 .big_logo
     color #bbb
-    font-family "bank gothic"
+    font-family "Orbitron"
     font-weight bold
     font-size 50pt
     margin 30px
 .welcome
-    font-family "Brush Script MT"
+    font-family "Damion"
     font-size 40pt
 .small_logo
-    font-family calibri
-    font-weight bold
+    font-family "Orbitron"
     text-decoration none
     float left
     margin 4px
     color #bbb
 #footer
     padding 30px 0
-    clear both
+    text-align center
 #session
     padding 2px
     float right
