--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,11 @@
-h1.big_logo RADIOCA.SE
-p.welcome -Welcome
+#indexpage
+  h1.big_logo RADIOCA.SE
 
-a(href='/newcase') Create Case
+  img(src='/images/OldRadio_2.jpg')
+
+  .welcome -Welcome
+
+  br
+
+  a(href='/newcase') Create Case
 
