--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,9 +2,11 @@
 html
   head
     meta(name='viewport', content='initial-scale=1.0, width=device-width')
-    title #{title} 
+    title #{title}
+    link(href='http://fonts.googleapis.com/css?family=Orbitron:400,500|Dancing+Script|Damion', rel='stylesheet', type='text/css')
     -each style in styles
       link(rel='stylesheet', href='/stylesheets/#{style}')
+
     script(src = '/javascripts/jquery-latest.js')
     script(src = '/auth/client')
     script(src = 'http://platform.twitter.com/widgets.js')
