trouble with mousewheel ipad

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -36,12 +36,10 @@
 .stack
     position relative
     overflow hidden
-.stack_window
-    position absolute
-    overflow hidden
 .stack_image
     display none
     width 100%
+    overflow scroll
 .imgload
     visibility hidden
 .deletebutton
