--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -27,6 +27,7 @@
 #footer {
   padding: 30px 0;
   text-align: center;
+  clear: both;
 }
 #session {
   padding: 2px;
@@ -45,13 +46,10 @@
   position: relative;
   overflow: hidden;
 }
-.stack_window {
-  position: absolute;
-  overflow: hidden;
-}
 .stack_image {
   display: none;
   width: 100%;
+  overflow: scroll;
 }
 .imgload {
   visibility: hidden;
