--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -68,6 +68,9 @@
         width 100%
     #texts
         width 100%
+@media screen and (max-width: 585px)
+    .big_logo
+        font-size 30pt
 @media screen and (min-width: 1024px)
     #radios
         width 65%
