--- a/views/index.jade
+++ b/views/index.jade
@@ -7,5 +7,20 @@
 
   br
 
+  a(href='/cases') List Cases
+  |  -
   a(href='/newcase') Create Case
 
+
+#footer
+  a(href='/')
+    | Home
+  | -
+  a(href='/readme')
+    | Readme
+  | -
+  a(href='/about')
+    | About
+  | -
+  a(href='Contact')
+    | Contact
