--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -90,6 +90,11 @@
     width: 100%;
   }
 }
+@media screen and (max-width: 585px) {
+  .big_logo {
+    font-size: 30pt;
+  }
+}
 @media screen and (min-width: 1024px) {
   #radios {
     width: 65%;
