login radioca.se

--- a/views/case.jade
+++ b/views/case.jade
@@ -69,7 +69,7 @@ script(type='text/javascript')
     $('#uploadarea').hide();
     $('#editbar').hide();
     $('#newpage').hide();
-    $('.stack').children(':first').children(':first').show();
+    $('.stack').children(':first').show();
     //$('#editbutton').hide();
 
     rendermd(); // renders the markdown textareas.
