--- a/views/colophon.jade
+++ b/views/colophon.jade
@@ -1,21 +1,16 @@
 :markdown
-  **DISCLAIMER** I'm not a lawyer, and I don't work or live in the US, but from my understanding medicolegal issues can be quite complicated over there, so if you work in such an environment, **PLEASE DON'T CITE** the information you find here as authorative (well, actually this goes for everyone). I don't know if you get off the hook citing an article or book but **PLEASE DOUBLE CHECK ALL REFERENCES** provided, they are for your convenience, but I rely on people's good will that they are correct.
+  Application made with [node.js](http://nodejs.org/) and [express.js](http://expressjs.com) templates in [jade](http://jade-lang.com/), styled with [stylus](http://learnboost.github.com/stylus/). Written in [markdown](http://daringfireball.net/projects/markdown/). Hosted by [Linode](http://linode.com/).
+  Grab the source from [Github](https://github.com/lijf/radioca.se), it is available under the [MIT license](http://www.opensource.org/licenses/mit-license.php)
 
-  I want this to be a beautiful and curated collection, which is easy to access and filled with only useful information. I prefer a lower number of higher quality cases to a larger number of subpar entries, which mostly adds to noise. But what defines a good case is of course subjective so there are only three ground rules, great images (including whole stacks of images), good discussions and relevant references.
 
-  Personally I like references to books I have in my apartment or at our department, () but if you use other books please cite them, maybe I get some good ideas of what to add to my library... References to articles are of course excellent, I work at a university hospital and have access to subscriptions of most major journals, but maybe this is not the case for all readers, so the bigger the better, I guess. (eg Radiology, Radiographics, Also, if you can find the article in Mendeley (1)  and/or pubmed please add these accession numbers as well. If you read a case and take the time to look for the references in Pubmed or Mendeley maybe you can send feedback to the author with the accession numbers in case they are not already there.
 
-  To improve quality and give praise there is a feedback icon at the bottom of each page with three options of how to share your opinions, which are not mutually exclusive. Choosing 'author' means the author of the page will get an email with your feedback, 'public' means the feedback will be added to the very same page for all to read (thus enabling a sort of discussion) and 'curator' sends me an email with the feedback.
+         Copyright (c) 2011 Johannes Finnsson
 
-  When you add a case you have the option of keeping it private but the default is that everything added to the site is shared with other users. Remember to **ANONYMIZE ALL PATIENT RELATED INFORMATION**. If I see a case which I don't think is suitable for the open collection I will flag it 'private' and send the author an email explaining my reasons. I will not remove cases from private collections, unless information stored therein is illegal to keep in databases.
+         Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
 
-  You can write up your cases in any language you like. I have used the determination 'case' when talking about the pages of the site, but 'folder’ might be better. Maybe you prefer to do a presentation on a specific diagnosis or group of diagnoses adding images from several patients.
+         The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
 
-  As I guess you have noticed this is an invitation only site, but any member can invite anyone she or he likes. This is another measure to try to decrease noise.
-
-  Finally, this is a hobby of mine, I built the site because it's something I hope can be useful during my radiology residency. I plan on charging a nominal one-time fee of $10 to offset server costs in the future but I won't after-charge anyone (if you sign up now it will continue to be free for you). I don’t claim any rights to information you add to the database. Please see [about](./about) for further information on the software of this site. If you want to get in touch with me you can drop me a line at <johannes.finnsson@gmail.com> or tweet me (lijf).
-
-<sub>(1) If you like collecting articles but haven't tried Mendeley I suggest you check it out <http://www.mendeley.com>, they have a great program for storing your pdf:s, good integration to word and bibtex and an interesting social network thing where you can connect with people reading what you read and share articles</sub>
+         THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #footer
   a(href='/')
     | Home
@@ -27,4 +22,4 @@
     | About
   | -
   a(href='Contact')
-    | Contactscript(type='text/javascript')
+    | Contact
