--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 #indexpage
   h1.big_logo RADIOCA.SE
 
-  img(src='/images/OldRadio_2.jpg')
+  img(src='/images/OldRadio_2_320.jpg')
 
   .welcome -Welcome
 
@@ -10,7 +10,6 @@
   a(href='/cases') List Cases
   |  -
   a(href='/newcase') Create Case
-
 
 #footer
   a(href='/')
@@ -24,4 +23,3 @@
   | -
   a(href='Contact')
     | Contact
-script(
