--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -13,6 +13,7 @@
 .welcome
     font-family "Damion"
     font-size 40pt
+    color #e90
 .small_logo
     font-family "Orbitron"
     text-decoration none
