--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -59,6 +59,7 @@
 @media screen and (max-width: 450px)
     #container
         padding-top 60px
+        width 100%
     #session
         top 5px
         margin 0 auto
