no margins big logo

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -9,7 +9,7 @@
     font-family "Orbitron"
     font-weight bold
     font-size 50pt
-    margin 30px
+    margin-top 30px
 .welcome
     font-family "Damion"
     font-size 40pt
