--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -75,6 +75,7 @@
 @media screen and (max-width: 450px) {
   #container {
     padding-top: 60px;
+    width: 100%;
   }
   #session {
     top: 5px;
