--- a/views/about.jade
+++ b/views/about.jade
@@ -1,7 +1,7 @@
 :markdown
   RADIOCA.SE - a database of radiological cases.
 
-  For the moment this is an invite-only site. If you have been  invited you log in using your twitter account. The site is under development and free to use, in the future however I probably will charge a one-time fee of $10 to offset some of the server costs.
+  For the moment this is an invite-only site. If you have been  invited you log in using your twitter account. The site is under development and free to use, in the future however I probably will charge a one-time fee of $10 to offset the server costs.
 
   It
 
