--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,7 +11,7 @@
   font-family: "Orbitron";
   font-weight: bold;
   font-size: 50pt;
-  margin: 30px;
+  margin-top: 30px;
 }
 .welcome {
   font-family: "Damion";
