--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -5,9 +5,7 @@
 #indexpage
     text-align center
 #newcase
-    text-align center
     margins 0 auto
-    padding 30px
 .big_logo
     color #bbb
     font-family "Orbitron"
@@ -146,7 +144,7 @@ body
     line-height 1
     height 100%
 h1, h2, h3, h4 
-    color #222
+    color #e90
     font-weight 400
 h1, h2, h3, h4, h5, p 
     margin-bottom 24px
