info@radioca.se

--- a/views/case.jade
+++ b/views/case.jade
@@ -58,7 +58,7 @@ iframe(id='editbar', src='about:none')
   a(href='/about')
     | About
   | -
-  a(href='Contact')
+  a(href='mailto:info@radioca.se')
     | Contact
     
 script(type='text/javascript')
