--- a/views/newcase.jade
+++ b/views/newcase.jade
@@ -19,3 +19,15 @@ form(id='newcase')
     | * Swedish users can find ICD-codes at
   a(href='http://www.icd.nu')
     | icd.nu
+#footer
+  a(href='/')
+    | Home
+  | -
+  a(href='/readme')
+    | Readme
+  | -
+  a(href='/about')
+    | About
+  | -
+  a(href='mailto:info@radioca.se')
+    | Contact
