--- a/views/edit.jade
+++ b/views/edit.jade
@@ -10,5 +10,7 @@
       | Done
 script(type='text/javascript')
   $(function(){
+    $('#session').hide();
+    $('#footer').hide();
     editfunctions(); //activates edit functionality when page is loaded
   });
