--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,7 +1,6 @@
 #container
     margin 0 auto
     width 90%
-    padding-top 5px
 #indexpage
     text-align center
 #newcase
@@ -55,7 +54,7 @@
 #texts
     width 50%
     float right
-    clear left
+    clear both
 .txt
     background-image url("/images/paper/Texture0213.jpg")
 @media screen and (max-width: 450px)
@@ -94,19 +93,10 @@ textarea
     width 512px
     background-image url("/images/paper/Texture0214.jpg")
 #editbar
-    position fixed
-    border none
-    top 0px
-    left 0px
-    margin-top 0px
     height 30px
     width 100%
-#controls
-    position relative
 #savepage
-    position fixed
-    left 355px
-    top 5px
+    margin-top -5px
 #uploadarea
     position fixed
     left 17%
