--- a/views/newcase.jade
+++ b/views/newcase.jade
@@ -8,7 +8,7 @@ form(id='newcase')
   input(type='text', name='ICD', id='ICD')
   br
   | Private 
-  input(type='checkbox', name='private', id='private, value='private')
+  input(type='checkbox', name='private', id='private', value='private')
   br
   button(id='createcase', type='button')
     | Create Case
@@ -16,5 +16,5 @@ form(id='newcase')
   br
   sup
     | * Swedish users can find ICD-codes at
-  a(href='http://www.icd.nu')
-    | icd.nu
+    a(href='http://www.icd.nu')
+      | icd.nu
