--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -6,7 +6,7 @@
 #newcase
     margins 0 auto
 .big_logo
-    color #bbb
+    color #bca
     font-family "Orbitron"
     font-weight bold
     font-size 50pt
@@ -15,12 +15,17 @@
     font-family "Damion"
     font-size 40pt
     color #e90
+#sl
+    position fixed
+    height 0
+    width 30px
+    margin-top 100px
 .small_logo
     font-family "Orbitron"
     text-decoration none
-    float left
-    margin 4px
-    color #bbb
+    -webkit-transform rotate(-90deg)
+    -moz-transform rotate(-90deg)
+    color #bca
 #footer
     padding 30px 0
     text-align center
@@ -58,8 +63,9 @@
 .txt
     background-image url("/images/paper/Texture0213.jpg")
 @media screen and (max-width: 450px)
+    #sl
+        display none
     #container
-        padding-top 60px
         width 100%
     #session
         top 5px
@@ -88,13 +94,13 @@ textarea
     padding 10px 20px
 #markdown-help
     position absolute
-    left 5%
-    top 30px
-    width 512px
+    top 62px
+    width 45%
     background-image url("/images/paper/Texture0214.jpg")
 #editbar
     height 30px
     width 100%
+    overflow hidden
 #savepage
     margin-top -5px
 #uploadarea
