--- a/views/edit.jade
+++ b/views/edit.jade
@@ -12,5 +12,6 @@ script(type='text/javascript')
   $(function(){
     $('#session').hide();
     $('#footer').hide();
+    $('#sl').hide();
     editfunctions(); //activates edit functionality when page is loaded
   });
