--- a/views/case.jade
+++ b/views/case.jade
@@ -1,4 +1,5 @@
 #iframe(style='width: 0px; height: 0px; display:none')
+  iframe(name="postframe", id="postframe", class="hidden", src="about:none")
 #pageinfo
   | by:
   a(href='https://twitter.com/intent/user?screen_name=#{creator}')
