--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -18,14 +18,21 @@
 #sl
     position fixed
     height 0
-    width 30px
-    margin-top 100px
+    width 20px
+    -webkit-transform rotate(-90deg)
+    -moz-transform rotate(-90deg)
+    margin-top 110px
 .small_logo
     font-family "Orbitron"
     text-decoration none
-    -webkit-transform rotate(-90deg)
-    -moz-transform rotate(-90deg)
     color #bca
+#delete_dialog
+    position fixed
+    left 30%
+    top 50%
+    background black
+    width 35%
+    padding 70px
 #footer
     padding 30px 0
     text-align center
