--- a/views/edit.jade
+++ b/views/edit.jade
@@ -6,6 +6,8 @@
     input(id='save', type='submit', value='Save page')
     button(id='newpage', type='button')
       | New Page
+    button(id='delpage', type='button')
+      | Delete Page
     button(id='done', type='button')
       | Done
 script(type='text/javascript')
