worked on readme

--- a/views/readme.jade
+++ b/views/readme.jade
@@ -11,7 +11,7 @@
 
   You can write up your cases in any language you like. I have used the determination 'case' when talking about the pages of the site, but 'folder’ might be better. Maybe you prefer to do a presentation on a specific diagnosis or group of diagnoses adding images from several patients.
 
-  As you might have noticed this is an invitation only site, if you'd like an invitation please send an email to [info@radioca.se](mailto:info@radioca.se).
+  As you might have noticed this is an invitation only site, if you'd like an invitation please send an email to <info@radioca.se>.
 
   Finally, this is a hobby of mine, I built the site because it's something I hope can be useful during my radiology residency. It is free to use for the moment. In the future, once it's up and running smoothly and has outgrown it's current linode (about 20Gb of storage) I will look into models for charging to keep the site growing. Probably it will come to a one-time sign up fee of about $10-20 (roughly half the price of one pay-per view article of an academic publisher - and I would like to think that this site in the end might be more useful) - maybe there will also be an extra charge for large numbers of private cases.
 
